tests/function/function.exp
apply.js:2
  2:   return this.length; // expect []/"" this
                   ^^^^^^ property `length`. Property not found in
  9: test.apply(0, ["", 0]); // error: lookup `length` on Number
                ^ Number

apply.js:2
  2:   return this.length; // expect []/"" this
                   ^^^^^^ property `length`. Property not found in
 32: (test.call.apply(test, [0, 123, 'foo']): void);
                             ^ Number

apply.js:2
  2:   return this.length; // expect []/"" this
                   ^^^^^^ property `length`. Property not found in
 37: (test.bind.apply(test, [0, 123]): (b: number) => number);
                             ^ Number

apply.js:12
 12: test.apply("", [""]); // error: string ~> number
     ^^^^^^^^^^^^^^^^^^^^ call of method `apply`
 12: test.apply("", [""]); // error: string ~> number
                     ^^ string. This type is incompatible with
  1: function test(a: string, b: number): number {
                                 ^^^^^^ number

apply.js:15
 15: test.apply("", ["", ""]); // error: string ~> number (2nd arg)
     ^^^^^^^^^^^^^^^^^^^^^^^^ call of method `apply`
 15: test.apply("", ["", ""]); // error: string ~> number (2nd arg)
                         ^^ string. This type is incompatible with
  1: function test(a: string, b: number): number {
                                 ^^^^^^ number

apply.js:16
 16: test.apply("", [0, 0]); // error: number ~> string (1st arg)
     ^^^^^^^^^^^^^^^^^^^^^^ call of method `apply`
 16: test.apply("", [0, 0]); // error: number ~> string (1st arg)
                     ^ number. This type is incompatible with
  1: function test(a: string, b: number): number {
                      ^^^^^^ string

apply.js:19
 19: function f(args) { test.apply("", args) }
                        ^^^^^^^^^^^^^^^^^^^^ call of method `apply`
 21: f(["", ""]); // error: string ~> number (2nd arg)
            ^^ string. This type is incompatible with
  1: function test(a: string, b: number): number {
                                 ^^^^^^ number

apply.js:19
 19: function f(args) { test.apply("", args) }
                        ^^^^^^^^^^^^^^^^^^^^ call of method `apply`
 22: f([0, 0]); // error: number ~> string (1st arg)
        ^ number. This type is incompatible with
  1: function test(a: string, b: number): number {
                      ^^^^^^ string

apply.js:25
 25: test.apply("", "not array"); // error: expect array of args
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `apply`. Expected array of arguments instead of
 25: test.apply("", "not array"); // error: expect array of args
                    ^^^^^^^^^^^ string

apply.js:32
 32: (test.call.apply(test, [0, 123, 'foo']): void);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `apply`
 32: (test.call.apply(test, [0, 123, 'foo']): void);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 32: (test.call.apply(test, [0, 123, 'foo']): void);
                                              ^^^^ undefined

apply.js:32
 32: (test.call.apply(test, [0, 123, 'foo']): void);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `apply`
 32: (test.call.apply(test, [0, 123, 'foo']): void);
                                ^^^ number. This type is incompatible with
  1: function test(a: string, b: number): number {
                      ^^^^^^ string

apply.js:32
 32: (test.call.apply(test, [0, 123, 'foo']): void);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `apply`
 32: (test.call.apply(test, [0, 123, 'foo']): void);
                                     ^^^^^ string. This type is incompatible with
  1: function test(a: string, b: number): number {
                                 ^^^^^^ number

apply.js:37
 37: (test.bind.apply(test, [0, 123]): (b: number) => number);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `apply`
 37: (test.bind.apply(test, [0, 123]): (b: number) => number);
                                ^^^ number. This type is incompatible with
  1: function test(a: string, b: number): number {
                      ^^^^^^ string

bind.js:7
  7:     y(123); // error, number !~> string
         ^^^^^^ function call
  7:     y(123); // error, number !~> string
           ^^^ number. This type is incompatible with
  4:   function(x: (a: string, b: string) => void) {
                                  ^^^^^^ string

call.js:4
  4:   return this.length; // expect []/"" this
                   ^^^^^^ property `length`. Property not found in
 11: test.call(0, "", 0); // error: lookup `length` on Number
               ^ Number

call.js:4
  4:   return this.length; // expect []/"" this
                   ^^^^^^ property `length`. Property not found in
 30: (test.apply.call(test, 0, [0, 'foo']): number);
                            ^ Number

call.js:14
 14: test.call("", ""); // error: string ~> number
     ^^^^^^^^^^^^^^^^^ call of method `call`
 14: test.call("", ""); // error: string ~> number
     ^^^^^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
  3: function test(a: string, b: number): number {
                                 ^^^^^^ number

call.js:17
 17: test.call("", "", ""); // error: string ~> number (2nd arg)
     ^^^^^^^^^^^^^^^^^^^^^ call of method `call`
 17: test.call("", "", ""); // error: string ~> number (2nd arg)
                       ^^ string. This type is incompatible with
  3: function test(a: string, b: number): number {
                                 ^^^^^^ number

call.js:18
 18: test.call("", 0, 0); // error: number ~> string (1st arg)
     ^^^^^^^^^^^^^^^^^^^ call of method `call`
 18: test.call("", 0, 0); // error: number ~> string (1st arg)
                   ^ number. This type is incompatible with
  3: function test(a: string, b: number): number {
                      ^^^^^^ string

call.js:21
 21: function f(args) { test.call("", args[0], args[1]) }
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `call`
 21: function f(args) { test.call("", args[0], args[1]) }
                                      ^^^^^^^ number. This type is incompatible with
  3: function test(a: string, b: number): number {
                      ^^^^^^ string

call.js:21
 21: function f(args) { test.call("", args[0], args[1]) }
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `call`
 21: function f(args) { test.call("", args[0], args[1]) }
                                               ^^^^^^^ string. This type is incompatible with
  3: function test(a: string, b: number): number {
                                 ^^^^^^ number

call.js:30
 30: (test.apply.call(test, 0, [0, 'foo']): number);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `call`
 30: (test.apply.call(test, 0, [0, 'foo']): number);
                                ^ number. This type is incompatible with
  3: function test(a: string, b: number): number {
                      ^^^^^^ string

call.js:30
 30: (test.apply.call(test, 0, [0, 'foo']): number);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `call`
 30: (test.apply.call(test, 0, [0, 'foo']): number);
                                   ^^^^^ string. This type is incompatible with
  3: function test(a: string, b: number): number {
                                 ^^^^^^ number

function.js:29
 29:   var a: number = x; // Error
                       ^ function type. This type is incompatible with
 29:   var a: number = x; // Error
              ^^^^^^ number

function.js:30
 30:   var b: string = x; // Error
                       ^ function type. This type is incompatible with
 30:   var b: string = x; // Error
              ^^^^^^ string

function.js:31
 31:   var c: Function = y; // Object is not a Function
                         ^ object type. This type is incompatible with
 31:   var c: Function = y; // Object is not a Function
              ^^^^^^^^ function type

function.js:37
 37:     (x.length: void); // error, it's a number
          ^^^^^^^^ number. This type is incompatible with
 37:     (x.length: void); // error, it's a number
                    ^^^^ undefined

function.js:38
 38:     (y.length: void); // error, it's a number
          ^^^^^^^^ number. This type is incompatible with
 38:     (y.length: void); // error, it's a number
                    ^^^^ undefined

function.js:39
 39:     (z.length: void); // error, it's a number
          ^^^^^^^^ number. This type is incompatible with
 39:     (z.length: void); // error, it's a number
                    ^^^^ undefined

function.js:41
 41:     (x.name: void); // error, it's a string
          ^^^^^^ string. This type is incompatible with
 41:     (x.name: void); // error, it's a string
                  ^^^^ undefined

function.js:42
 42:     (y.name: void); // error, it's a string
          ^^^^^^ string. This type is incompatible with
 42:     (y.name: void); // error, it's a string
                  ^^^^ undefined

function.js:43
 43:     (z.name: void); // error, it's a string
          ^^^^^^ string. This type is incompatible with
 43:     (z.name: void); // error, it's a string
                  ^^^^ undefined

function.js:48
 48:     x.length = 'foo'; // error, it's a number
                    ^^^^^ string. This type is incompatible with
number. See lib: core.js:101

function.js:49
 49:     y.length = 'foo'; // error, it's a number
         ^^^^^^^^ assignment of property `length`
 49:     y.length = 'foo'; // error, it's a number
                    ^^^^^ string. This type is incompatible with
number. See lib: core.js:101

function.js:50
 50:     z.length = 'foo'; // error, it's a number
         ^^^^^^^^ assignment of property `length`
 50:     z.length = 'foo'; // error, it's a number
                    ^^^^^ string. This type is incompatible with
number. See lib: core.js:101

function.js:52
 52:     x.name = 123; // error, it's a string
                  ^^^ number. This type is incompatible with
string. See lib: core.js:102

function.js:53
 53:     y.name = 123; // error, it's a string
         ^^^^^^ assignment of property `name`
 53:     y.name = 123; // error, it's a string
                  ^^^ number. This type is incompatible with
string. See lib: core.js:102

function.js:54
 54:     z.name = 123; // error, it's a string
         ^^^^^^ assignment of property `name`
 54:     z.name = 123; // error, it's a string
                  ^^^ number. This type is incompatible with
string. See lib: core.js:102

rest.js:8
  8: function rest_tuple<T>(...xs: [T]): T {
                                   ^^^ tuple type. rest parameter should have an explicit array type (or type `any`)

rest.js:17
 17: function rest_t<U, T: Array<U>>(...xs: T): U {
                                            ^ T. rest parameter should have an explicit array type (or type `any`)


Found 40 errors
